# gst-plugin-dreamsource

./: AUTHORS  COPYING  Makefile.am  configure.ac
src/: Makefile.am  gstdreamaudiosource.c  gstdreamaudiosource.h  gstdreamsource.c  gstdreamsource.h  gstdreamtssource.c  gstdreamtssource.h  gstdreamvideosource.c  gstdreamvideosource.h
